fix: styling on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -27,3 +27,7 @@
     top: 4px;
     font-size: 12px;
 }
+
+.box-shadow {
+    box-shadow: 0 11px 34px 0 rgba(0, 0, 0, 0.2);
+}
